; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-integrity.c_complete_journal_op.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-integrity.c_complete_journal_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.journal_completion = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @complete_journal_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @complete_journal_op(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.journal_completion*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.journal_completion*
  store %struct.journal_completion* %5, %struct.journal_completion** %3, align 8
  %6 = load %struct.journal_completion*, %struct.journal_completion** %3, align 8
  %7 = getelementptr inbounds %struct.journal_completion, %struct.journal_completion* %6, i32 0, i32 1
  %8 = call i32 @atomic_read(i32* %7)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @BUG_ON(i32 %11)
  %13 = load %struct.journal_completion*, %struct.journal_completion** %3, align 8
  %14 = getelementptr inbounds %struct.journal_completion, %struct.journal_completion* %13, i32 0, i32 1
  %15 = call i32 @atomic_dec_and_test(i32* %14)
  %16 = call i64 @likely(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %1
  %19 = load %struct.journal_completion*, %struct.journal_completion** %3, align 8
  %20 = getelementptr inbounds %struct.journal_completion, %struct.journal_completion* %19, i32 0, i32 0
  %21 = call i32 @complete(i32* %20)
  br label %22

22:                                               ; preds = %18, %1
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
